payload/core/monitoring/httproute.yaml
---
# Grafana HTTPRoute - Infra Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: infra-gateway
      namespace: kube-system
  hostnames:
    - "monitoring.infra.k8s.wlkr.ch"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
